One More Minor Change

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             <div class="skil-name">Mongo DB</div>
           </div>
         </div>
-        <div class="see-more-projects"><a href="#">View More</a></div>
+        <div class="see-more-projects"><a href="./template/skills.html">View More</a></div>
       </section>
 
       <section class="project-section">
@@ -254,7 +254,7 @@
             </div>
           </div>
         </div>
-        <div class="see-more-projects"><a href="404">View More</a></div>
+        <div class="see-more-projects"><a href="./template/projects.html">View More</a></div>
       </section>
     </div>
     
