Some changes done

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="specifications">Designer & Developer</div>
             <div class="brief-bio">I'm a UI/UX designer and Software developer, I started my journey by building a small Blog website design, in just a few short years, I love to build fast and efficient website, learning Algorithms and explore about new technologies.</div>
             <div class="end-of-era">
-              <button class="download-btn"><a href="./static/Resume.pdf" download="Resume.pdf">Resume</a><img src="./static/icons/download.svg" alt="download"></button>
+              <a class="download-btn" href="./static/Resume.pdf" download="Resume.pdf"><span>Resume</span><img src="./static/icons/download.svg" alt="download"></a>
               <a class="about-me" href="./template/about.html"><span>About Me</span><img src="./static/icons/arrow.svg" alt="arrow"></a>
             </div>
           </div>
