--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
             <div class="project-description">A platform to deliver goods between cities with facility of tracking status and logistics management.</div>
             <div class="project-completion">
               <div class="complete-status">
-                <span class="run">Running</span>
+                <span class="done">Completed</span>
                 <span><img src="./static/icons/check.svg" alt="Check"></span>
               </div>
               <div class="date-comp">27/06/2021</div>
