--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
             <div class="project-completion">
               <div class="complete-status">
                 <span class="done">Completed</span>
-                <span><img src="./static/icons/check.svg" alt="Check"></span>
+                <span><img src="./static/icons/check-comp.svg" alt="Check"></span>
               </div>
               <div class="date-comp">27/06/2021</div>
             </div>
