--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
             <div class="project-description">A platform to engage people to learn, read and write for having an excitement in their busy life.</div>
             <div class="project-completion">
               <div class="complete-status">
-                <span>Completed</span>
+                <span class="done">Completed</span>
                 <span><img src="./static/icons/check-comp.svg" alt="Check"></span>
               </div>
               <div class="date-comp">17/09/2021</div>
