--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div class="card-container">
               <div class="top-card">
                 <img class="need-to-hide" src="./static/icons/shine-darkBlue-1.svg" alt="blue-stars">
-                <a href="/web-dev-card" class="cardings-style">
+                <a href="https://github.com/Rakeshsoni7296/Waymore.git" target="_blank" class="cardings-style">
                   <div><img src="./static/icons/webdev.svg" alt="Web-development"></div>
                   <div class="card-details">
                     <div class="card-heading">Web Development</div>
@@ -78,11 +78,11 @@
               </div>
               <div class="bottom-card">
                 <img src="./static/icons/shine-blue.svg" alt="blue-stars">
-                <a href="/ui-ux-card" class="cardings-style">
+                <a href="https://www.figma.com/proto/agSxC1IDnEI2tSo5zQ24bB/Todo-List?page-id=0%3A1&node-id=1%3A2&starting-point-node-id=1%3A2&scaling=scale-down" target="_blank" class="cardings-style">
                   <div><img src="./static/icons/ui-ux.svg" alt="UI-UX"></div>
                   <div class="card-details">
                     <div class="card-heading">UI / UX</div>
-                    <div class="card-content">Check my new design of an e-commerce store.</div>
+                    <div class="card-content">Check my new design on balancing life events.</div>
                   </div>
                 </a>
                 <img class="need-to-hide" src="./static/icons/shine-darkBlue-2.svg" alt="green-stars">
