--- a/index.html
+++ b/index.html
@@ -144,12 +144,12 @@
       <section class="project-section">
         <h2>My Projects</h2>
         <p>I have build build a few projects over designing and development shown below</p>
-        <nav class="project-nav">
+        <!-- <nav class="project-nav">
           <div><a class="link-bar active-link-prj" href="/">All</a></div>
           <div><a class="link-bar" href="404">Web Development</a></div>
           <div><a class="link-bar" href="404">UI/UX Design</a></div>
           <div><a class="link-bar" href="404">Others</a></div>
-        </nav>
+        </nav> -->
         <div class="project-container">
           <div class="project-card">
             <div class="project-img"><img src="./static/imgs/bazarpur.jpg" alt="UI/UX Design"></div>
