--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div class="card-container">
               <div class="top-card">
                 <img class="need-to-hide" src="./static/icons/shine-darkBlue-1.svg" alt="blue-stars">
-                <a href="https://github.com/Rakeshsoni7296/Waymore.git" target="_blank" class="cardings-style">
+                <a href="https://github.com/Rakeshsoni7296/swiftCart" target="_blank" class="cardings-style">
                   <div><img src="./static/icons/webdev.svg" alt="Web-development"></div>
                   <div class="card-details">
                     <div class="card-heading">Web Development</div>
